# starter-fastapi

./: .replit  app.py  movie_stats.py  pyproject.toml  requirements.txt  server.py
classes/: movie_stats.py
models/: Expense.py  ExpenseList.py  Movie.py  MovieStats.py  Todo.py  TodoList.py
